--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <ol class="project_list">
                     <li class="project_item"> 
                         <span class="project"> 
-                            <a href="https://vigorous-mcnulty-bb8a11.netlify.app/" class="project_link">https://vigorous-mcnulty-bb8a11.netlify.app/</a>
-                            .........
+                            <a href="https://hromok.github.io/Project2-Resume/" class="project_link">https://hromok.github.io/Project2-Resume/</a>
+                            ......................
                                 <span class="project_brucket">[</span>
                              HTML5, CSS3 
                                 <span class="project_brucket">]</span>
@@ -47,8 +47,8 @@
                     </li>
                     <li class="project_item">
                         <span class="project"> 
-                            <a href="https://heuristic-swirles-9ea42a.netlify.app/" class="project_link">https://heuristic-swirles-9ea42a.netlify.app/</a>
-                            ...........
+                            <a href="https://hromok.github.io/Project1-Card/" class="project_link">https://hromok.github.io/Project1-Card/</a>
+                            ...............................
                             <span class="project_brucket">[</span>
                             HTML5, CSS3, JavaScript 
                             <span class="project_brucket">]</span>
@@ -56,8 +56,8 @@
                     </li>
                     <li class="project_item">
                         <span class="project">
-                            <a href="https://elegant-wiles-9e5419.netlify.app/" class="project_link">https://elegant-wiles-9e5419.netlify.app/</a>
-                            ...................
+                            <a href="https://hromok.github.io/Project3-Drag-n-drop/" class="project_link">https://hromok.github.io/Project3-Drag-n-drop/</a>
+                            ............
                             <span class="project_brucket">[</span>
                             HTML5, CSS3, JavaScript
                             <span class="project_brucket">]</span>
@@ -120,6 +120,10 @@
                 <p>
                         <span class="contact_type">S:</span>
                         <a href="https://www.linkedin.com/in/roman-hnativ-824768210/" class="contact_link"> Linkedin</a></p>
+                <p>
+                    <span class="contact_type">G:</span>
+                    <a href="https://github.com/hromok" class="contact_link"> GitHub</a>
+                </p>
             </div>
             <!--TechSkills-->
             <div class="techskills">
